# systemDesign

./: .gitignore  README.md
movieRecommendation/: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  cmake_install.cmake
movieRecommendation/apis/: CMakeLists.txt
movieRecommendation/apis/inc/: publicApi.hpp
movieRecommendation/apis/src/: publicApi.cpp
movieRecommendation/bin_apis/: Makefile  cmake_install.cmake
movieRecommendation/bin_core/: Makefile  cmake_install.cmake
movieRecommendation/bin_model/: Makefile  cmake_install.cmake
movieRecommendation/common/: utility.hpp
movieRecommendation/core/: CMakeLists.txt
movieRecommendation/core/inc/: addService.hpp  movieCatalog.hpp  reviewService.hpp  userManager.hpp
movieRecommendation/core/src/: addService.cpp  movieCatalog.cpp  reviewService.cpp  userManager.cpp
movieRecommendation/models/: CMakeLists.txt
movieRecommendation/models/inc/: movie.hpp  review.hpp  user.hpp
movieRecommendation/models/src/: movie.cpp  review.cpp  user.cpp
movieRecommendation/test/src/: main.cpp
redisCache/learning/go-redis/: README.md  go.mod  go.sum  main.go  twitter.db
